--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
+            <a href="./ventas.html" class="nav-link"> Productos </a>
           </li>
           <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+            <a href=".contacto.html" class="nav-link"> Contáctanos </a>
           </li>
           <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+            <a href="./nosotros.html" class="nav-link"> Acerca de nosotros </a>
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
+          <a href="./Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
     </div>
