--- a/ventas.html
+++ b/ventas.html
@@ -156,7 +156,7 @@
   <div class="row d-flex justify-content-center">
     <div class="col-sm" >
       <div id="list-items">
-
+      
       </div>
     </div>
     <div class="col-sm" >
@@ -168,6 +168,12 @@
       <div id="list-items3">
 
       </div>
+    </div>
+    <div row align-items-center>
+    <div class="col-sm-4" >
+    <div  id="div_Productos">
+    </div>
+  </div>
     </div>
   </div>
 </div>
@@ -221,7 +227,7 @@
 
 
  
-    <script src="/assets/js/ventas/ventas.js"></script>
+    <script src="/proyecto-integrador-hogari/Assets/JS/ventas/ventas.js"></script>>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
